--- a/bertytech/layouts/index.html
+++ b/bertytech/layouts/index.html
@@ -7,10 +7,10 @@
 		<img src="/img/wave_blue.svg" class="img img-wave">
 		<div class="container">	
 			<div class="img img-planet-purple">
-				{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/planet_purple.png") "layout" "fill")}}
+				{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/planet_purple.png") "layout" "fill" "width" "400")}}
 			</div>
 			<div class="img img-planet-pink">
-				{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/planet_pink.png") "layout" "fill")}}
+				{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/planet_pink.png") "layout" "fill" "width" "700")}}
 			</div>
 		</div><!-- /.container -->
 		<img src="/img/wave_bottom.svg" class="img img-wave-bottom">
