--- a/bertytech/layouts/partials/img.html
+++ b/bertytech/layouts/partials/img.html
@@ -4,16 +4,14 @@
 {{- $mainImg := .src -}}
 {{- if $canConvert -}}
     {{/*  Have to use resize to convert to webp. See issue: https://discourse.gohugo.io/t/image-conversion-without-resizing/32429  */}}
-    {{- $mainImg = .src.Resize (printf "%sx webp" (.width | default "200")) -}}
+    {{- $mainImg = .src.Resize (printf "%sx webp" (string .width | default "500")) -}}
 {{- end -}}
 
 <amp-img
     class="{{ with .class }}{{.}}{{end}}"
     {{ with .title }}title="{{.}}"{{end}}
     {{ with .alt }}alt="{{.}}"{{end}}
-    {{ with .src }}
     src="{{$mainImg.RelPermalink}}"
-    {{end}}
     {{ with .width }}width="{{.}}"{{end}}
     {{ with .height }}height="{{.}}"{{end}}
     layout="{{ $layout }}">
