small typo fix on section_value.html
minor typo fix, from solution focus to solution focused :)

--- a/bertytech/layouts/partials/section_values.html
+++ b/bertytech/layouts/partials/section_values.html
@@ -18,7 +18,7 @@
        <div class="col-lg-3 col-md-6">
          <div class="block block-value bg-white">
           <div class="block-value-icon c-blue"><i class="fal fa-robot"></i></div>
-           <div class="block-value-text">We are&nbsp;<br/>solution focus</div>
+           <div class="block-value-text">We are&nbsp;<br/>solution focused</div>
          </div>
        </div>
        <div class="col-lg-3 col-md-6">
