Add rocket image

--- a/bertytech/layouts/_default/roadmap.html
+++ b/bertytech/layouts/_default/roadmap.html
@@ -32,12 +32,20 @@
           <h3>{{ upper .Params.vision_title }}</h3>
         </div>
       </div>
-      <div class="row justify-content-between">
-        <div class="col-lg-4">
-
+      <div class="row justify-content-between align-items-center">
+        <div class="col-lg-3">
+          <div>
+            <img src="1_berty_rocket.svg" class="img-fluid" />
+          </div>
         </div>
         <div class="col-lg-6 text-justify">
           {{ .Params.vision_body | markdownify }}
+          <div class="d-flex justify-content-end">
+            <div class="text-center text-small">
+              <span style="color: #4AD5F6">Berty Core Crew</span><br/>
+              Paris, France
+            </div>
+          </div>
         </div>
       </div>
     </section>
