--- a/bertytech/layouts/_default/roadmap.html
+++ b/bertytech/layouts/_default/roadmap.html
@@ -9,7 +9,7 @@
 
 </header>
 
-<div class="content">
+<div class="content" style="margin-bottom: -225px;">
   <div class="container">
     <section class="section-blocks-3">
       <div class="row">
@@ -96,17 +96,19 @@
        {{ end }}
       </div>
     </section>
+  </div>
 
-    <!-- Previous phases -->
-    <section id="roadmap">
+  <!-- Roadmap -->
+  <section id="roadmap" style="background: url({{($.Resources.GetMatch "background_jungle.svg").RelPermalink}}); margin-top: -330px; padding-top: 350px; padding-bottom: 200px;">
+    <div class="container">
       <div class="row justify-content-center mb-5">
         <div class="col-lg-12 text-center">
-          <h3>{{ upper .Params.roadmap_title }}</h3>
+          <h3 class="text-white">{{ upper .Params.roadmap_title }}</h3>
         </div>
       </div>
       <div class="row justify-content-between">
         <div class="col-lg-6">
-          <div class="block block-wi bg-white" style="padding-left: 60px; padding-right: 60px;">
+          <div class="block block-wi bg-white h-100" style="padding-left: 60px; padding-right: 60px;">
             {{with .Params.roadmap_card}}
             <div class="text-center mb-4">
               {{ ($.Resources.GetMatch "graph.svg").Content | safeHTML }}
@@ -171,7 +173,7 @@
         </div>
 
         <div class="col-lg-6">
-          <div class="block block-wi bg-white" style="padding-left: 60px; padding-right: 60px;">
+          <div class="block block-wi bg-white h-100" style="padding-left: 60px; padding-right: 60px;">
             <div class="row">
               {{ range $i, $el := $all_phases }}
                 <div class="col-lg-12" style="margin-bottom: 80px;">
@@ -191,9 +193,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-  </div>
 </div>
 
 {{ partial "footer" . }}
