--- a/bertytech/assets/css/style.scss
+++ b/bertytech/assets/css/style.scss
@@ -3829,3 +3829,92 @@ $table-first-column-width-mobile: 115px;
     padding: 20px;
   }
 }
+
+/* ROADMAP PAGE */
+.roadmap-page {
+  .hero-card {
+    border-radius: 0;
+    color: #fff; 
+    text-align: left; 
+    h1 {
+      font-weight: bold;
+    }
+  }
+  .section-title {
+    font-weight: bold;
+    position: relative;
+    &::after {
+      content: " ";
+      height: 2px;
+      background: #C4CDD5;
+      width: 66px;
+      position: absolute;
+      bottom: -25px;
+      left: calc(50% - 33px);
+    }
+  }
+
+  // Vision
+  .vision {
+    padding-bottom: 250px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    &__image {
+      padding-left: 70px;
+    }
+    &__text {
+      font-size: 22px;
+      text-align: justify;
+      &__signature {
+        text-align: center;
+        font-size: 14px;
+        &__name {
+          color: $color-cyan;
+        }
+      }
+    }
+  }
+
+  // Phase cards
+  .phase_cards {
+    &__item {
+      padding: 20px;
+      &__check {
+        width: 36px;
+        position: absolute; 
+        left: 5px; 
+        top: 5px;
+      }
+      &__icon {
+        fill: #d5d5d5;
+        height: 100px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+      }
+      &__title {
+        font-size: 15px;
+        margin-bottom: 5px;
+      }
+      &__subtitle {
+        color: #6A7C92;
+        font-size: 14px;
+      }
+      &.active {
+        .phase_cards__item__icon {
+          fill: $color-blue;
+        }
+      }
+    }
+  }
+
+  // Roadmap
+  .roadmap {
+    margin-top: -280px; 
+    padding-top: 350px; 
+    padding-bottom: 200px;
+  }
+}
