--- a/bertytech/layouts/_default/roadmap.html
+++ b/bertytech/layouts/_default/roadmap.html
@@ -8,11 +8,9 @@
 {{ $active_android_bug := 0 }}
 {{ $active_documentation := -1 }}
 
-<header class="header-rounded large {{ if .Params.Hclass }}{{.Params.Hclass}}{{ else }}bg-blue gradient{{ end }}" {{ with .Params.image_bg }}style="background-image:url('{{ ($.Page.Resources.GetMatch .).RelPermalink }}')"{{end}}>
+<header class="header-rounded large bg-blue gradient"></header>
 
-</header>
-
-<div class="content" style="margin-bottom: -225px;">
+<div class="content">
   
   <section class="section-blocks-3">
     <div class="container">
@@ -213,20 +211,25 @@
           </div>
         </div>
 
-        <div class="col-lg-6">
-          <div class="block block-wi bg-white h-100" style="padding-left: 60px; padding-right: 60px;">
-            <div class="row">
+        <!-- Right -->
+        <div class="col-lg-6 roadmap__right">
+          <div class="block block-wi bg-white h-100">
+            <div class="row roadmap__right__phases">
               {{ range $i, $el := $all_phases }}
-                <div class="col-lg-12" style="margin-bottom: 80px;">
-                  <div class="bg-white d-flex align-items-center justify-content-between {{ if le $i $active_phase }}active{{end}}">
-                    <div style="width: 64px; height: 64px; background: #272FCC; border-radius: 4px; display: flex; align-items: center; justify-content: center;">
+                {{ $is_active := le $i $active_phase }}
+                {{ $is_current := eq $i $active_phase }}
+                <div class="col-lg-12 roadmap__right__phases__item {{ if $is_active }}active{{end}} {{ if $is_current }}current{{end}}">
+                  <div class="d-flex align-items-center justify-content-between">
+                    <div class="roadmap__right__phases__item__icon">
                       {{ ($.Resources.GetMatch .icon).Content | safeHTML }}
                     </div>
                     <div class="text-center">
-                      <p class="mb-0">{{.title}}</p>
-                      <p>{{.subtitle}}</p>
+                      <p class="roadmap__right__phases__item__title">{{.title}}</p>
+                      <p class="roadmap__right__phases__item__subtitle">{{.subtitle | safeHTML}}</p>
                     </div>
-                    <div>{{ ($.Resources.GetMatch "check-green.svg").Content | safeHTML }}</div>
+                    <div class="roadmap__right__phases__item__check">
+                      {{ if and ($is_active) (not $is_current) }}{{ ($.Resources.GetMatch "check-green.svg").Content | safeHTML }}{{end}}
+                    </div>
                   </div>
                 </div>
               {{ end }}
